[package]
name = "schnorr-dlog-zkp"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13", features = ["arithmetic", "serde"] }
rand_core = "0.6"
sha2 = "0.10"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
elliptic-curve = "0.13.8"
hex = "0.4.3"
